--- a/packages/ctool-site/head.html
+++ b/packages/ctool-site/head.html
@@ -1,5 +1,5 @@
 <meta name="keywords" content="ctool,software development tools">
-<meta name="name" content="Ctool - Commonly Used Software Development Tools">
+<meta name="name" content="Dtool - Commonly Used Software Development Tools">
 <meta name="description" content="Commonly Used Software Development Tools: Hash/Encrypt/Decrypt/Code Convert/Timestamp/Qrcode/IP Query/Code Formatter/Unicode/Regex/...">
 <meta name="image" content="/icon/screenshot_light.png">
 <meta name="application-name" content="Ctool">
